# fabro

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMPLETION_REPORT.txt  CONTRIBUTING.md  Cargo.toml  DJANGO_FIX_SUMMARY.md  DJANGO_IMPLEMENTATION.md  DJANGO_ISSUE_FIX.md  Dockerfile  Dockerfile.deploy  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  INDEX.md  README.md  README_DJANGO_FIX.md  SOLUTION_SUMMARY.md  START_HERE.md  branch_a.txt  checkpoint.json  clippy.toml  django-inline-verbose-name.patch  django_password_reset_token_fix.patch  docker-compose.demo.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.ts  fabro.toml  fly.toml  graph.fabro  manifest.json  package.json  plan.md  railway.toml  render.yaml  run.json  (+5 more)
crates/arc-api/: Cargo.toml
crates/arc-api/src/: github_webhooks.rs  jwt_auth.rs  lib.rs  serve.rs  server.rs  server_config.rs  sessions.rs  tls.rs
crates/arc-api/src/demo/: mod.rs
crates/arc-api/tests/: integration.rs  openapi_conformance.rs  pagination.rs
crates/arc-exe/: Cargo.toml
crates/arc-exe/src/: lib.rs
crates/arc-exe/tests/: integration.rs
crates/arc-slack/: Cargo.toml
crates/arc-slack/examples/: slack_e2e.rs
crates/arc-slack/src/: blocks.rs  client.rs  config.rs  connection.rs  dispatch.rs  interaction.rs  threads.rs
lib/crates/arc-config/: Cargo.toml
lib/crates/arc-config/src/: cli.rs  project.rs
lib/crates/arc-linear/: Cargo.toml
lib/crates/arc-linear/src/: lib.rs
lib/crates/fabro-checkpoint/: Cargo.toml
lib/crates/fabro-checkpoint/src/: author.rs  branch.rs  error.rs  git.rs  lib.rs  metadata.rs
lib/crates/fabro-client/: Cargo.toml
lib/crates/fabro-client/src/: auth_store.rs  client.rs  credential.rs  error.rs  lib.rs  loopback.rs  session.rs  sse.rs  target.rs
lib/crates/fabro-config/: Cargo.toml
lib/crates/fabro-config/src/: bind.rs  builders.rs  cli.rs  combine.rs  config.rs  context.rs  defaults.rs  defaults.toml  dotenv.rs  effective_settings.rs  envfile.rs  hook.rs  lib.rs  load.rs  logging.rs  mcp.rs  merge.rs  parse.rs  project.rs  run.rs  sandbox.rs  server.rs  settings.rs  storage.rs  user.rs
lib/crates/fabro-config/src/layers/: cli.rs  combine.rs  features.rs  log_filter.rs  mod.rs  project.rs  run.rs  server.rs  settings.rs  (+2 more)
lib/crates/fabro-config/tests/: combine.rs  defaults.rs  resolve_cli.rs  resolve_features.rs  resolve_project.rs  resolve_root.rs  resolve_run.rs  resolve_server.rs  resolve_workflow.rs
lib/crates/fabro-daytona/: Cargo.toml
lib/crates/fabro-daytona/src/: lib.rs
lib/crates/fabro-dev/: Cargo.toml
lib/crates/fabro-dev/src/: main.rs
lib/crates/fabro-github/: Cargo.toml
lib/crates/fabro-github/src/: lib.rs
lib/crates/fabro-github/tests/: integration.rs
lib/crates/fabro-graphviz/: Cargo.toml
lib/crates/fabro-graphviz/src/: condition.rs  error.rs  fidelity.rs  lib.rs  render.rs  stylesheet.rs
lib/crates/fabro-http/: Cargo.toml
lib/crates/fabro-http/src/: lib.rs
lib/crates/fabro-macros/: Cargo.toml
lib/crates/fabro-macros/src/: lib.rs  options_metadata.rs
lib/crates/fabro-macros/tests/: options_metadata.rs
lib/crates/fabro-model/: Cargo.toml
lib/crates/fabro-model/src/: billing.rs  catalog.json  catalog.rs  model_ref.rs  provider.rs  types.rs
lib/crates/fabro-options-metadata/: Cargo.toml
lib/crates/fabro-options-metadata/src/: lib.rs
lib/crates/fabro-proc/: Cargo.toml  build.rs
lib/crates/fabro-proc/src/: flock.rs  lib.rs  pre_exec.rs  signal.rs  title.rs
lib/crates/fabro-proctitle/: Cargo.toml  build.rs
lib/crates/fabro-proctitle/c/: capture_argv.c
lib/crates/fabro-proctitle/src/: lib.rs
lib/crates/fabro-redact/: Cargo.toml  build.rs
lib/crates/fabro-redact/src/: entropy.rs  gitleaks.rs  lib.rs  safe_url.rs
lib/crates/fabro-retro/: Cargo.toml
lib/crates/fabro-retro/src/: lib.rs  retro.rs  retro_agent.rs
lib/crates/fabro-sandbox/: Cargo.toml
lib/crates/fabro-sandbox/src/: clone_source.rs  config.rs  docker.rs  error.rs  lib.rs  local.rs  read_guard.rs  reconnect.rs  sandbox.rs  sandbox_provider.rs  sandbox_record.rs  sandbox_spec.rs  ssh_common.rs  test_support.rs  worktree.rs
lib/crates/fabro-sandbox/tests/: error.rs
lib/crates/fabro-spa/: Cargo.toml
lib/crates/fabro-spa/assets/: index.html
lib/crates/fabro-spa/src/: lib.rs
lib/crates/fabro-test/: Cargo.toml
lib/crates/fabro-test/src/: http_assert.rs  lib.rs
lib/crates/fabro-tracker/: Cargo.toml
lib/crates/fabro-tracker/src/: github.rs  lib.rs  linear.rs
lib/crates/fabro-types/: Cargo.toml
lib/crates/fabro-types/src/: artifact.rs  auth.rs  blob_ref.rs  checkpoint.rs  combine.rs  conclusion.rs  dense.rs  event_envelope.rs  failure_signature.rs  graph.rs  interview.rs  lib.rs  node_status.rs  outcome.rs  pull_request.rs  repository.rs  retro.rs  run.rs  run_id.rs  run_projection.rs  run_summary.rs  sandbox_record.rs  stage_id.rs  start.rs  status.rs  usage.rs
lib/crates/fabro-types/tests/: run_event_serde.rs  run_record_serde.rs  run_spec_methods.rs  run_spec_serde.rs
lib/crates/fabro-validate/: Cargo.toml
lib/crates/fabro-validate/src/: lib.rs  rules.rs
lib/crates/fabro-workflow/: Cargo.toml  README.md
lib/crates/fabro-workflow/src/: artifact.rs  artifact_snapshot.rs  artifact_upload.rs  artifacts.rs  asset_snapshot.rs  context.rs  devcontainer_bridge.rs  error.rs  event.rs  file_resolver.rs  git.rs  graph.rs  lib.rs  node_handler.rs  outcome.rs  pull_request.rs  retry.rs  run_dir.rs  run_dump.rs  run_lookup.rs  run_materialization.rs  run_options.rs  run_status.rs  runtime_store.rs  sandbox_git.rs  services.rs  test_support.rs  workflow_bundle.rs
lib/crates/fabro-workflow/tests/: materialize_run.rs
test/twin/github/: Cargo.toml
test/twin/github/src/: auth.rs  fixtures.rs  lib.rs  server.rs  state.rs  test_support.rs
test/twin/openai/: Cargo.toml
test/twin/openai/src/: config.rs  lib.rs  logs.rs  state.rs
test/twin/openai/tests/: config_contract.rs  debug_ui.rs  failure_modes.rs  live_openai_contract.rs  responses_contract.rs  tool_and_schema_contract.rs
(+2844 files in other folders)
