[package]
name = "arc-api"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "HTTP API server for Arc pipelines"

[lib]
doctest = false

[dependencies]
arc-workflows = { path = "../arc-workflows" }
arc-agent = { path = "../arc-agent" }
arc-llm = { path = "../arc-llm" }
arc-util = { path = "../arc-util" }
arc-db = { path = "../arc-db" }
axum = "0.8"
dirs.workspace = true
sqlx.workspace = true
tower = "0.5"
tokio-stream = { workspace = true, features = ["sync"] }
jsonwebtoken.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = "0.5"
http-body-util = "0.1"
tempfile = "3"
