[package]
name = "arc-slack"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Slack Socket Mode integration for Arc interviewer"

[lib]
doctest = false

[dependencies]
arc-workflows = { path = "../arc-workflows" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
tracing.workspace = true

[[example]]
name = "slack-e2e"
path = "examples/slack_e2e.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
toml.workspace = true
tracing-subscriber.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
