[package]
name = "arc-config"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Centralized configuration types for Arc"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
arc-agent = { path = "../arc-agent" }
arc-mcp = { path = "../arc-mcp" }
arc-workflows = { path = "../arc-workflows" }
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
