[package]
name = "fabro-checkpoint"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Git-backed checkpoint storage for Fabro workflows"
repository = "https://github.com/brynary/arc"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-types = { path = "../fabro-types" }
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
