[package]
name = "fabro-client"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Typed HTTP client for the Fabro API"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
fabro-api = { path = "../fabro-api" }
fabro-http.workspace = true
fabro-model = { path = "../fabro-model" }
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
fs2.workspace = true
futures.workspace = true
libc = "0.2"
progenitor-client = "0.13"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
