[package]
name = "fabro-daytona"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Daytona cloud sandbox for Fabro agent tool operations"

[lib]
doctest = false

[dependencies]
fabro-agent = { path = "../fabro-agent" }
fabro-config = { path = "../fabro-config" }
fabro-github = { path = "../fabro-github" }
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
daytona-sdk.workspace = true
daytona-api-client.workspace = true
base64.workspace = true
tracing.workspace = true
serde.workspace = true
chrono = { workspace = true, features = ["serde"] }
git2.workspace = true
rand.workspace = true
shlex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
toml.workspace = true
