[package]
name = "fabro-dev"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Internal development tooling for Fabro"

[[bin]]
name = "fabro-dev"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
