[package]
name = "fabro-dev"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Internal development tooling for Fabro"

[[bin]]
name = "fabro-dev"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
regex.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
