[package]
name = "fabro-github"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "GitHub App authentication and API helpers for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio = { workspace = true }
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
