[package]
name = "fabro-github"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "GitHub App authentication and API helpers for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
fabro-http.workspace = true
fabro-types = { path = "../fabro-types" }
jsonwebtoken.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio = { workspace = true }
base64.workspace = true
strum.workspace = true

[dev-dependencies]
fabro-macros = { path = "../fabro-macros" }
fabro-test = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
