[package]
name = "fabro-graphviz"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Graphviz DOT parser and typed graph data model"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
nom = "7"
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
