[package]
name = "fabro-graphviz"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Graphviz DOT parser and typed graph data model"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fabro-graphviz-sys = { path = "../fabro-graphviz-sys" }
fabro-types = { path = "../fabro-types" }
nom = "7"
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
