[package]
name = "fabro-macros"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Procedural macros for fabro"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
clap.workspace = true
fabro-options-metadata.workspace = true
