[package]
name = "fabro-model"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "LLM model catalog: provider identity, model metadata, and resolution"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
insta.workspace = true
