[package]
name = "fabro-proc"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Safe wrappers for process management primitives (signals, pre-exec hooks, title rewriting)"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
