[package]
name = "fabro-proctitle"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "In-place process title updates for Fabro detached engines"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
