[package]
name = "fabro-redact"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Secret and credential redaction utilities for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
aho-corasick.workspace = true
ref-cast.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[build-dependencies]
serde = { workspace = true }
toml.workspace = true

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
