[package]
name = "fabro-retro"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Retrospective analysis for Fabro workflow runs"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
chrono = { workspace = true, features = ["serde"] }
fabro-agent = { path = "../fabro-agent" }
fabro-llm = { path = "../fabro-llm" }
fabro-store = { path = "../fabro-store" }
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
