[package]
name = "fabro-test"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Test utilities for fabro integration tests"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
assert_cmd = "2"
axum = { workspace = true }
fabro-proc = { path = "../fabro-proc" }
insta = { workspace = true, features = ["filters"] }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
twin-openai = { workspace = true }
twin-github = { workspace = true }
