[package]
name = "fabro-tracker"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Tracker trait and types for issue tracking integrations"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-github = { path = "../fabro-github" }
async-trait.workspace = true
fabro-http.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true }

[dev-dependencies]
httpmock = "0.8"
tokio = { workspace = true, features = ["test-util", "macros"] }
