[package]
name = "fabro-types"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Shared record structs and enums for Fabro"

[lib]
doctest = false

[features]
default = []
clap = ["dep:clap"]
test-support = []

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true }
dirs.workspace = true
fabro-macros = { path = "../fabro-macros" }
fabro-model = { path = "../fabro-model" }
fabro-util = { path = "../fabro-util" }
hex.workspace = true
ipnet = { version = "2.11.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
