[package]
name = "fabro-validate"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Validation and lint rules for Fabro workflow graphs"

[lib]
doctest = false

[dependencies]
fabro-graphviz = { path = "../fabro-graphviz" }
fabro-llm = { path = "../fabro-llm" }
serde = { workspace = true }
thiserror = { workspace = true }
