[package]
name = "twin-openai"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Fake OpenAI-compatible server for local black-box testing"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = { workspace = true, features = ["macros"] }
fabro-http.workspace = true
futures-util.workspace = true
http = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = "0.5"
